day5 solved + added unit testing
should probably switch to CMake...

--- a/2020/Makefile
+++ b/2020/Makefile
@@ -5,7 +5,10 @@ CXXFLAGS = -std=c++17 -Wall -Werror -O3
 LDFLAGS =
 
 SRCS := $(wildcard *.cpp)
+TEST_SRCS := $(filter-out adventofcode.cpp, $(SRCS))
+SRCS := $(filter-out test.cpp, $(SRCS))
 OBJS := $(SRCS:.cpp=.o)
+TEST_OBJS := $(TEST_SRCS:.cpp=.test.o)
 DEPS := $(SRCS:.cpp=.d)
 
 debug: CXXFLAGS += -g -Og
@@ -14,12 +17,19 @@ debug: $(EXE)
 release: $(EXE)
 
 clean:
-	$(RM) $(OBJS) $(EXE) $(DEPS)
+	$(RM) $(OBJS) $(TEST_OBJS) $(EXE) test $(DEPS)
+
+test: CXXFLAGS += -DTEST -g -Og
+test: $(TEST_OBJS)
+	$(CXX) -o $@ $^ $(LDFLAGS)
 
 $(EXE): $(OBJS)
 	$(CXX) -o $@ $^ $(LDFLAGS)
 
 -include $(DEPS)
+
+%.test.o: %.cpp
+	$(CXX) -o $@ $(CXXFLAGS) -MMD -MP -c $<
 
 %.o: %.cpp
 	$(CXX) -o $@ $(CXXFLAGS) -MMD -MP -c $<
