--- a/2020/rust/Cargo.toml
+++ b/2020/rust/Cargo.toml
@@ -7,5 +7,7 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-regex = "1"
+anyhow = "1.0"
 indoc = "1.0"
+regex = "1"
+reqwest = { version = "0.11", features = ["blocking", "cookies"] }
